[package]
name = "seedlink"
version = "1.0.1"
authors = ["Brian Savage <savage13@gmail.com>"]
description = "SeedLink library for rust"
repository = "https://github.com/savage13/seedlink"
homepage = "https://github.com/savage13/seedlink"
documentation = "https://docs.rs/seedlink/"
readme = "README.md"
keywords = ["miniseed", "seedlink", "seismology"]
license = "MIT"

[dependencies]
chrono = "0.4"
libc   = "0.2"
glob   = "0.2"
serde  = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2"
miniseed = "1.0.0"

